# rtab-stereo-ros

./: README.md  Screencast from 2026-03-30 15-40-41.webm  config.rviz  docker-compose.yaml
rtabmap_diff_drive/: README.md  package.xml  setup.cfg  setup.py
rtabmap_diff_drive/config/: stereo_calibration.yaml
rtabmap_diff_drive/launch/: rtabmap_stereo.launch.py  stereo_robot_simulation.launch.py
rtabmap_diff_drive/urdf/: robot.urdf.xacro  stereo_robot.urdf.xacro
rtabmap_diff_drive/worlds/: test.world
